--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 </head>
   <body class="bg-slate-900 text-slate-100 min-h-screen overflow-x-hidden">
     <div id="root"></div>
+     <script type="module" src="index.tsx"></script>
   </body>
 </html>
