--- a/index.html
+++ b/index.html
@@ -1,24 +1,357 @@
-
 <!DOCTYPE html>
 <html lang="zh-TW">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gravity Ball Sort Puzzle</title>
+    <title>重力球分類大師 - 矩陣轉置挑戰</title>
     <script src="https://cdn.tailwindcss.com"></script>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
-  }
-}
-</script>
+    <script type="importmap">
+    {
+      "imports": {
+        "react": "https://esm.sh/react@19.0.0",
+        "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+        "lucide-react": "https://esm.sh/lucide-react@0.460.0"
+      }
+    }
+    </script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700;900&display=swap');
+        body {
+            font-family: 'Noto+Sans+TC', sans-serif;
+            background-color: #020617;
+            color: #f8fafc;
+            margin: 0;
+            overflow-x: hidden;
+        }
+        .scrollbar-hide::-webkit-scrollbar {
+            display: none;
+        }
+        .scrollbar-hide {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
+        @keyframes shine {
+            from { transform: translateX(-100%) rotate(-45deg); }
+            to { transform: translateX(200%) rotate(-45deg); }
+        }
+        .shine-effect::after {
+            content: '';
+            position: absolute;
+            top: 0; left: 0; width: 50%; height: 100%;
+            background: linear-gradient(to right, transparent, rgba(255,255,255,0.2), transparent);
+            transform: skewX(-25deg);
+            animation: shine 3s infinite;
+        }
+    </style>
 </head>
-  <body class="bg-slate-900 text-slate-100 min-h-screen overflow-x-hidden">
+<body class="min-h-screen">
     <div id="root"></div>
-     <script type="module" src="index.tsx"></script>
-  </body>
+
+    <script type="module">
+        import React, { useState, useEffect, useCallback } from 'react';
+        import { createRoot } from 'react-dom/client';
+        import { RefreshCw, Trophy, Info, Move, Columns, ChevronDown } from 'lucide-react';
+
+        // --- 常數定義 ---
+        const ROWS = 12; 
+        const CAPACITY = 12; 
+        const COLS = 13; 
+        const BALL_COLORS = [
+            '#EF4444', '#F97316', '#F59E0B', '#EAB308', 
+            '#84CC16', '#22C55E', '#10B981', '#06B6D4', 
+            '#3B82F6', '#6366F1', '#8B5CF6', '#EC4899'
+        ];
+
+        // --- 子組件：球體 (Ball) ---
+        const BallComponent = ({ color, isTop }) => (
+            <div
+                className={`
+                    w-7 h-7 md:w-9 md:h-9 lg:w-11 lg:h-11 rounded-full shrink-0
+                    transition-all duration-500 transform
+                    ${isTop ? 'hover:scale-110' : ''}
+                    relative shadow-lg overflow-hidden z-20
+                `}
+                style={{ 
+                    backgroundColor: color,
+                    boxShadow: `
+                        inset -3px -3px 6px rgba(0,0,0,0.5), 
+                        inset 3px 3px 6px rgba(255,255,255,0.4), 
+                        0 4px 10px rgba(0,0,0,0.6),
+                        0 0 8px ${color}44
+                    `
+                }}
+            >
+                <div className="absolute top-[10%] left-[15%] w-[40%] h-[30%] bg-white/40 rounded-full blur-[1px] -rotate-[35deg]" />
+                <div className="absolute inset-0 bg-gradient-to-br from-transparent via-transparent to-black/30" />
+            </div>
+        );
+
+        // --- 子組件：欄位 (Column) ---
+        const ColumnComponent = ({ balls, isTarget, isDragOver, onClick }) => {
+            const emptySlots = CAPACITY - balls.length;
+            return (
+                <div
+                    onClick={onClick}
+                    className={`
+                        relative group cursor-pointer w-10 md:w-12 lg:w-14 
+                        flex flex-col-reverse items-center gap-1 p-1.5
+                        rounded-b-[2.5rem] rounded-t-2xl transition-all duration-500
+                        ${isDragOver ? 'bg-indigo-500/30 ring-4 ring-indigo-500/50 border-indigo-400' : isTarget && balls.length < CAPACITY ? 'bg-indigo-500/10 border-indigo-500/20' : 'bg-slate-900/60 hover:bg-slate-800/80 border-white/5'}
+                        border-x border-b
+                    `}
+                    style={{ height: `${CAPACITY * 3.4}rem` }}
+                >
+                    <div className="absolute inset-y-0 left-2 w-[15%] bg-white/5 pointer-events-none rounded-l-full z-10" />
+                    <div className="absolute inset-0 bg-gradient-to-t from-black/20 via-transparent to-white/5 pointer-events-none rounded-b-[2.5rem]" />
+                    
+                    {balls.map((ball, idx) => (
+                        <BallComponent key={ball.id} color={ball.color} isTop={idx === balls.length - 1} />
+                    ))}
+
+                    {Array.from({ length: emptySlots }).map((_, i) => (
+                        <div 
+                            key={`empty-${i}`} 
+                            className={`
+                                w-7 h-7 md:w-9 md:h-9 lg:w-11 lg:h-11 rounded-full shrink-0 
+                                transition-all duration-300 
+                                ${i === emptySlots - 1 && isTarget ? 'border-2 border-dashed border-indigo-500/40 animate-pulse' : 'bg-black/20 border border-white/5'}
+                            `}
+                        />
+                    ))}
+                </div>
+            );
+        };
+
+        // --- 主應用程式 (App) ---
+        const App = () => {
+            const [grid, setGrid] = useState([]);
+            const [heldBall, setHeldBall] = useState(null);
+            const [steps, setSteps] = useState(0);
+            const [isWon, setIsWon] = useState(false);
+            const [showInfo, setShowInfo] = useState(false);
+            const [dragOverCol, setDragOverCol] = useState(null);
+
+            const initGame = useCallback(() => {
+                const newGrid = Array.from({ length: COLS }, () => []);
+                // 前 12 欄填入球，使每一橫列顏色相同
+                for (let c = 0; c < 12; c++) {
+                    for (let r = 0; r < ROWS; r++) {
+                        newGrid[c].push({
+                            id: `ball-${r}-${c}`,
+                            color: BALL_COLORS[r]
+                        });
+                    }
+                }
+                // 第 13 欄保持空
+                setGrid(newGrid);
+                setHeldBall(null);
+                setSteps(0);
+                setIsWon(false);
+            }, []);
+
+            useEffect(() => {
+                initGame();
+            }, [initGame]);
+
+            const checkWin = useCallback((currentGrid) => {
+                let sortedCols = 0;
+                let emptyCols = 0;
+                currentGrid.forEach(col => {
+                    if (col.length === 0) {
+                        emptyCols++;
+                    } else if (col.length === CAPACITY) {
+                        const firstColor = col[0].color;
+                        if (col.every(ball => ball.color === firstColor)) {
+                            sortedCols++;
+                        }
+                    }
+                });
+                return sortedCols === 12 && emptyCols === 1;
+            }, []);
+
+            const handleAction = (colIndex) => {
+                if (isWon) return;
+                if (heldBall) {
+                    if (grid[colIndex].length < CAPACITY) {
+                        const newGrid = [...grid];
+                        newGrid[colIndex] = [...newGrid[colIndex], heldBall];
+                        setGrid(newGrid);
+                        setHeldBall(null);
+                        setSteps(prev => prev + 1);
+                        if (checkWin(newGrid)) setIsWon(true);
+                    }
+                } else {
+                    if (grid[colIndex].length > 0) {
+                        const newGrid = [...grid];
+                        const picked = newGrid[colIndex].pop();
+                        if (picked) {
+                            setGrid(newGrid);
+                            setHeldBall(picked);
+                        }
+                    }
+                }
+            };
+
+            const onDragStart = (e, colIndex) => {
+                if (heldBall || isWon || grid[colIndex].length === 0) {
+                    e.preventDefault();
+                    return;
+                }
+                const newGrid = [...grid];
+                const picked = newGrid[colIndex].pop();
+                if (picked) {
+                    setGrid(newGrid);
+                    setHeldBall(picked);
+                }
+            };
+
+            const onDrop = (e, colIndex) => {
+                e.preventDefault();
+                setDragOverCol(null);
+                if (heldBall && grid[colIndex].length < CAPACITY) {
+                    const newGrid = [...grid];
+                    newGrid[colIndex] = [...newGrid[colIndex], heldBall];
+                    setGrid(newGrid);
+                    setHeldBall(null);
+                    setSteps(prev => prev + 1);
+                    if (checkWin(newGrid)) setIsWon(true);
+                }
+            };
+
+            return (
+                <div className="min-h-screen flex flex-col items-center p-4 md:p-8 select-none">
+                    <header className="w-full max-w-7xl flex flex-col md:flex-row justify-between items-center gap-4 mb-12">
+                        <div className="flex items-center gap-4">
+                            <div className="p-4 bg-indigo-600 rounded-2xl shadow-xl shadow-indigo-900/40 relative overflow-hidden">
+                                <Columns className="w-8 h-8 text-white relative z-10" />
+                                <div className="absolute inset-0 bg-white/20 -translate-x-full rotate-45 animate-[shine_3s_infinite]" />
+                            </div>
+                            <div>
+                                <h1 className="text-3xl font-black tracking-tight text-white italic">重力球分類大師</h1>
+                                <p className="text-slate-500 text-xs font-bold uppercase tracking-[0.2em]">由橫轉縱的矩陣邏輯挑戰</p>
+                            </div>
+                        </div>
+
+                        <div className="flex items-center gap-8 bg-slate-900/80 p-4 rounded-3xl border border-white/5 backdrop-blur-md shadow-2xl">
+                            <div className="flex flex-col items-center px-6 border-r border-slate-800">
+                                <span className="text-[10px] text-slate-500 uppercase font-black tracking-widest">目前步數</span>
+                                <span className="text-4xl font-mono font-black text-indigo-400 leading-none mt-1">{steps}</span>
+                            </div>
+                            <div className="flex gap-3">
+                                <button onClick={() => setShowInfo(true)} className="p-3 bg-slate-800 hover:bg-slate-700 rounded-xl transition-all border border-slate-700 text-slate-300">
+                                    <Info className="w-6 h-6" />
+                                </button>
+                                <button onClick={initGame} className="flex items-center gap-2 px-8 py-3 bg-indigo-600 hover:bg-indigo-500 rounded-xl transition-all shadow-lg shadow-indigo-900/40 font-bold text-white uppercase text-sm tracking-widest">
+                                    <RefreshCw className="w-5 h-5" />
+                                    <span>重置遊戲</span>
+                                </button>
+                            </div>
+                        </div>
+                    </header>
+
+                    <div className="mb-10 flex flex-col items-center group">
+                        <div className={`
+                            w-24 h-24 rounded-[2.5rem] border-2 border-dashed flex items-center justify-center transition-all duration-700
+                            ${heldBall ? 'border-indigo-400 bg-indigo-400/20 scale-110 shadow-[0_0_50px_rgba(99,102,241,0.3)]' : 'border-slate-800 bg-slate-900/20'}
+                        `}>
+                            {heldBall ? (
+                                <div
+                                    className="w-16 h-16 rounded-full shadow-2xl animate-pulse"
+                                    style={{ 
+                                        backgroundColor: heldBall.color,
+                                        boxShadow: `0 0 30px ${heldBall.color}aa, inset -4px -4px 12px rgba(0,0,0,0.5), inset 4px 4px 12px rgba(255,255,255,0.4)` 
+                                    }}
+                                />
+                            ) : (
+                                <Move className="w-10 h-10 text-slate-800 group-hover:scale-110 transition-transform" />
+                            )}
+                        </div>
+                        <span className="mt-3 text-[10px] font-black uppercase text-slate-600 tracking-[0.3em]">
+                            {heldBall ? '球已抓取' : '點擊欄位或拖曳來取球'}
+                        </span>
+                    </div>
+
+                    <main className="w-full flex-grow flex justify-center items-end overflow-x-auto pb-16 px-4 scrollbar-hide">
+                        <div className="flex gap-4 p-8 bg-slate-900/40 rounded-[4rem] border border-white/5 backdrop-blur-xl min-w-max relative shadow-2xl">
+                            <div className="flex gap-2 md:gap-4">
+                                {grid.map((columnBalls, idx) => (
+                                    <div
+                                        key={`col-wrapper-${idx}`}
+                                        onDragOver={(e) => { e.preventDefault(); setDragOverCol(idx); }}
+                                        onDrop={(e) => onDrop(e, idx)}
+                                        onDragLeave={() => setDragOverCol(null)}
+                                        draggable={!heldBall && columnBalls.length > 0}
+                                        onDragStart={(e) => onDragStart(e, idx)}
+                                    >
+                                        <ColumnComponent
+                                            balls={columnBalls}
+                                            isTarget={heldBall !== null}
+                                            isDragOver={dragOverCol === idx}
+                                            onClick={() => handleAction(idx)}
+                                        />
+                                    </div>
+                                ))}
+                            </div>
+                        </div>
+                    </main>
+
+                    {isWon && (
+                        <div className="fixed inset-0 bg-slate-950/95 backdrop-blur-3xl flex items-center justify-center z-50 p-6">
+                            <div className="bg-slate-900 p-14 rounded-[4rem] border border-indigo-500/30 shadow-[0_0_150px_rgba(99,102,241,0.2)] max-w-sm w-full text-center animate-in fade-in zoom-in duration-500">
+                                <div className="w-36 h-36 bg-gradient-to-br from-indigo-500 to-purple-600 rounded-full flex items-center justify-center mx-auto mb-10 shadow-2xl ring-12 ring-indigo-500/10">
+                                    <Trophy className="w-20 h-20 text-white" />
+                                </div>
+                                <h2 className="text-5xl font-black mb-6 text-white italic tracking-tighter">挑戰成功！</h2>
+                                <p className="text-slate-400 mb-12 font-bold uppercase tracking-widest text-sm">
+                                    你完成了完美的分類<br/>總步數：<span className="text-indigo-400 text-3xl font-mono mx-1">{steps}</span>
+                                </p>
+                                <button onClick={initGame} className="w-full py-6 bg-white text-slate-950 font-black rounded-[2.5rem] transition-all transform hover:scale-105 active:scale-95 shadow-2xl uppercase tracking-[0.3em]">
+                                    重新開始
+                                </button>
+                            </div>
+                        </div>
+                    )}
+
+                    {showInfo && (
+                        <div className="fixed inset-0 bg-black/90 backdrop-blur-2xl flex items-center justify-center z-50 p-6" onClick={() => setShowInfo(false)}>
+                            <div className="bg-slate-900 p-12 rounded-[3.5rem] border border-slate-800 max-w-md shadow-2xl relative" onClick={e => e.stopPropagation()}>
+                                <h3 className="text-3xl font-black italic mb-10 text-white flex items-center gap-4 underline decoration-indigo-500 decoration-4 underline-offset-[12px]">
+                                    <Info className="w-8 h-8 text-indigo-500" /> 遊戲玩法
+                                </h3>
+                                <div className="space-y-8 text-slate-300 font-bold text-base tracking-wide leading-relaxed">
+                                    <div className="flex gap-5">
+                                        <div className="w-8 h-8 bg-indigo-600/20 rounded-xl flex items-center justify-center text-indigo-400 shrink-0 font-black">1</div>
+                                        <p><span className="text-indigo-400">初始狀態：</span>12 個橫列 (Row) 的球顏色一致，共有 13 個縱欄 (Column)，其中最後一欄是全空的。</p>
+                                    </div>
+                                    <div className="flex gap-5">
+                                        <div className="w-8 h-8 bg-indigo-600/20 rounded-xl flex items-center justify-center text-indigo-400 shrink-0 font-black">2</div>
+                                        <p><span className="text-white font-black">勝利目標：</span>移動球體，直到 12 個縱欄各自變為單一顏色（縱向一致），並留下一欄全空。</p>
+                                    </div>
+                                    <div className="flex gap-5">
+                                        <div className="w-8 h-8 bg-indigo-600/20 rounded-xl flex items-center justify-center text-indigo-400 shrink-0 font-black">3</div>
+                                        <p><span className="text-indigo-400">操作方式：</span>點擊一欄取出最頂部的球，再點擊目標欄放下。本遊戲亦支援拖曳放置。</p>
+                                    </div>
+                                </div>
+                                <button onClick={() => setShowInfo(false)} className="mt-14 w-full py-5 bg-indigo-600 hover:bg-indigo-500 text-white rounded-3xl font-black uppercase tracking-widest shadow-xl shadow-indigo-900/40 transition-all">
+                                    開始挑戰
+                                </button>
+                            </div>
+                        </div>
+                    )}
+
+                    <footer className="mt-auto pt-10 flex items-center gap-6 text-slate-800 font-black text-[11px] tracking-[0.6em] uppercase">
+                        <span>13 欄位</span>
+                        <div className="w-2 h-2 bg-slate-800 rounded-full"></div>
+                        <span>12 顏色</span>
+                        <div className="w-2 h-2 bg-slate-800 rounded-full"></div>
+                        <span>單檔攜帶版</span>
+                    </footer>
+                </div>
+            );
+        };
+
+        const root = createRoot(document.getElementById('root'));
+        root.render(<App />);
+    </script>
+</body>
 </html>
